--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+//apply plugin: 'com.neenbedankt.android-apt'//增加这一句
 
 android {
     compileSdkVersion 23
@@ -16,16 +17,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.0.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
 
     compile 'com.jakewharton:butterknife:7.0.0'
+//    apt 'com.jakewharton:butterknife-compiler:8.1.0'//增加这一句
     //网络请求
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
