--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,14 +14,14 @@ android {
 
         ndk {
             //选择要添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a','x86', 'x86_64', 'mips', 'mips64'
+            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a', 'x86', 'x86_64', 'mips', 'mips64'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
 
         manifestPlaceholders = [
-                JPUSH_PKGNAME : applicationId,
+                JPUSH_PKGNAME: applicationId,
                 JPUSH_APPKEY : "7b04d55f08ee401627e5cb0a", //JPush上注册的包名对应的appkey.
-                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
         ]
 
     }
@@ -32,11 +32,10 @@ android {
         }
     }
 
-    greendao{
+    greendao {
         schemaVersion 1
         targetGenDir 'src/main/java/com/olq/multimedias/db'
     }
-
 
 
 }
@@ -45,20 +44,24 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
 
     compile project(':framework')
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
-    compile 'com.android.support:cardview-v7:23.0.0'
-
-    compile 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.5'
+    compile project(':zxing')
+//    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
+    
 
     //数据库
+    
+
+    // 此处以SDK 2.1.8版本为例
+
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.5'
     compile 'org.greenrobot:greendao:3.0.1'
     compile 'org.greenrobot:greendao-generator:3.0.0'
-
-    compile 'cn.jiguang:jpush:2.1.8'  // 此处以SDK 2.1.8版本为例
-
+    compile 'cn.jiguang:jpush:2.1.8'
+    compile 'com.android.support:support-v4:23.4.0'
+    testCompile 'junit:junit:4.12'
 }
