--- a/zxing/build.gradle
+++ b/zxing/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.example.zxingdemo"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
